fix: 修复上传的文件路径

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -37,5 +37,5 @@ jobs:
 
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "AirMCU-${GITHUB_REF#refs/tags/}.zip"
+          artifacts: "*.zip"
           allowUpdates: true
