--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           git clone --bare source dest.git
           cd dest.git
+          git push --mirror https://<username>:${{ secrets.API_TOKEN_GITHUB }}@github.com/<org>/<dest_repo>.git
       
       - name: Remove git information from destination repository
         run: |
