--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           path: source
+          submodules: true
 
       - name: Remove git information from destination repository
         run: |
