--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -25,26 +25,26 @@ body:
   - type: textarea
     id: expected
     attributes:
-      label: 预期的行为 / Expected behavior
-      description: 清楚简洁地描述你希望发生的事情。 / A clear and concise description of what you expected to happen.
-      placeholder: 它应该…… / It should be...
+      label: 如果正常，应该是什么样 / Expected behavior
+      description: 清楚简洁地描述，按这个步骤下来，本来应该运行得到的结果。 / A clear and concise description of what you expected to happen.
+      placeholder: 它应该打印…… / It should be...
     validations:
       required: true
   - type: textarea
     id: screenshots
     attributes:
       label: 截图 / Screenshots
-      description: 如果需要，请放上你的截图。 / If applicable, add screenshots to help explain your problem.
+      description: 请放上你的截图，请给出完整的截图。 / Add screenshots to help explain your problem.
     validations:
-      required: false
+      required: true
   - type: textarea
     id: logs
     attributes:
       label: 日志 / Logs
-      description: 日志贴到这里 / Upload your log files.
+      description: 日志贴到这里，请给出完整的日志。 / Upload your log files.
       description: 请使用```markdown语法进行包裹！
     validations:
-      required: false
+      required: true
   - type: input
     id: system
     attributes:
@@ -55,7 +55,7 @@ body:
   - type: input
     id: version
     attributes:
-      label: 软件版本 / Version
+      label: PACK包版本 / Version
       placeholder: 1.0.1.1
     validations:
       required: true
@@ -69,4 +69,6 @@ body:
         - label: 检查该问题是否已被提过 / Check that there isn't already an issue that reports the same bug to avoid creating a duplicate.
           required: true
         - label: 提供了最小可复现工程或详细的复现步骤，确保开发者可以复现 / The provided reproduction is a [minimal reproducible example](https://stackoverflow.com/help/minimal-reproducible-example) of the bug.
+          required: true
+        - label: 已经提供了完整的报错信息、日志、截图，没有经过删减。
           required: true
