--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -30,3 +30,19 @@ body:
       label: 其他备注信息或截图 / Add any other context or screenshots about the feature request here
     validations:
       required: false
+  - type: checkboxes
+    id: checkboxes
+    attributes:
+      label: 确认信息
+      description: 提交前请确认已经做过以下操作 / Before submitting the issue, please make sure you do the following
+      options:
+        - label: 检查过该需求，之前没有人提过 / Check that there isn't already an issue that reports the same bug to avoid creating a duplicate.
+          required: true
+        - label: 这个需求是真实存在的，并且对于本项目来说是必要的
+          required: true
+        - label: 我已经提供了该需求的清晰、详细、完整的方案，请按该方案进行实施
+          required: true
+        - label: 我认为我提供的信息已经足够，不需要其他人继续完善该需求的其他细节
+          required: true
+        - label: 我同意跟进该需求的实施进程，并在适时提供合理的解释与纠正
+          required: true
